[gd_scene load_steps=19 format=3 uid="uid://dfdsqglwbm6ap"]

[ext_resource type="Script" uid="uid://bvblfbvb8qsx" path="res://scenes/enemies/clock.gd" id="1_4f4gu"]
[ext_resource type="Texture2D" uid="uid://dnmf6onv3dtj4" path="res://assets/enemies/OPrazo/OPrazo_sheet.png" id="1_nmenk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4f4gu"]
atlas = ExtResource("1_nmenk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjgds"]
atlas = ExtResource("1_nmenk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8loci"]
atlas = ExtResource("1_nmenk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a7yl"]
atlas = ExtResource("1_nmenk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rofru"]
atlas = ExtResource("1_nmenk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_clyey"]
atlas = ExtResource("1_nmenk")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iqw6"]
atlas = ExtResource("1_nmenk")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3t66"]
atlas = ExtResource("1_nmenk")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp8iq"]
atlas = ExtResource("1_nmenk")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u7ht"]
atlas = ExtResource("1_nmenk")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_us0rq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f4gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjgds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8loci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a7yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rofru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iqw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3t66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp8iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u7ht")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2e5ll"]
radius = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qehkv"]
radius = 32.0
height = 64.0

[sub_resource type="Animation" id="Animation_4f4gu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, -64)]
}

[sub_resource type="Animation" id="Animation_nmenk"]
resource_name = "spawn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(320, -64), Vector2(320, 192), Vector2(320, 128)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjgds"]
_data = {
&"RESET": SubResource("Animation_4f4gu"),
&"spawn": SubResource("Animation_nmenk")
}

[node name="Clock" type="CharacterBody2D" node_paths=PackedStringArray("clock_timer", "animated_sprite", "ledge_checker_01", "ledge_checker_02", "hurtbox", "collision")]
position = Vector2(320, -64)
script = ExtResource("1_4f4gu")
clock_timer = NodePath("Clock_Timer")
animated_sprite = NodePath("AnimatedSprite2D")
ledge_checker_01 = NodePath("RayCasts/RayCast2D")
ledge_checker_02 = NodePath("RayCasts/RayCast2D2")
hurtbox = NodePath("HurtBox")
collision = NodePath("CollisionShape2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_us0rq")
autoplay = "default"
frame_progress = 0.551199

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2e5ll")

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCasts"]
position = Vector2(-24, 0)
target_position = Vector2(-64, 0)

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts"]
position = Vector2(24, 0)
target_position = Vector2(64, 0)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qehkv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kjgds")
}
autoplay = "spawn"

[node name="Clock_Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Clock_Timer" to="." method="_on_clock_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
